[project]
name = "embedapi"
version = "0.0.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "embedapi"
version = "0.0.12"
description = ""
authors = ["Your Name <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
numpy = "*"
more-itertools = "*"
openai = "*"
tiktoken = "*"
intermodel = {path = "./../../intermodel"}
httpx = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

